--- a/numismatists/ad.html
+++ b/numismatists/ad.html
@@ -113,14 +113,14 @@
             <div class="tab">Купленные</div>
           </div>
           <div class="options">
-            <label><span>Отметить все</span></label>
+            <label class="checkbox"><span>Отметить все</span></label>
             <button class="up">Поднять объявление</button>
             <button class="delete">Удалить</button>
           </div>
 
           <div class="list">
             <div class="row">
-            <label><span><img src="img-1.jpg"></span></label>
+            <label class="checkbox"><span><img src="img-1.jpg"></span></label>
               <div class="info">
                 <p class="title">1 рубль 1705 года («Польский талер»)</p>
                 <p class="price">137 932 <span>&#8399;</span></p>
