--- a/numismatists/new.html
+++ b/numismatists/new.html
@@ -112,9 +112,40 @@
                 <option>Древние города России</option>
               </select>
             </div>
-            
             <div class="row">
-              <input type="submit" value="Сохранить">
+              <span>Качество</span>
+              <select name="">
+                <option>Выберите категорию</option>
+                <option>70 лет Победы</option>
+                <option>Древние города России</option>
+              </select>
+            </div>
+            <div class="row">
+              <span placeholder="5000">Цена</span>
+              <input type="text">
+            </div>
+            <div class="row">
+              <span>Количество</span>
+              <input type="text" placeholder="5">
+            </div>
+            <div class="row">
+              <span>Срок выставления</span>
+              <select name="">
+                <option disabled>1 неделя</option>
+                <option>2 недели</option>
+                <option>3 недели</option>
+              </select>
+            </div>
+            <div class="row">
+              <span>Описание</span>
+              <input type="textarea">
+            </div>
+            <div class="row">
+            	<span>Фотографии <span class="desc">Вы можете загрузить не более 5 фото</span></span>
+              <div class="photo"></div>
+            </div>
+            <div class="row">
+              <input type="submit" value="Разместить объявление">
             </div>
           </form>
         </section>
