--- a/numismatists/new.html
+++ b/numismatists/new.html
@@ -121,7 +121,7 @@
             </div>
             <div class="row">
               <span placeholder="5000">Цена</span>
-              <input type="text">
+              <div><input type="text"></div>
             </div>
             <div class="row">
               <span>Количество</span>
@@ -130,7 +130,7 @@
             <div class="row">
               <span>Срок выставления</span>
               <select name="">
-                <option disabled>1 неделя</option>
+                <option  selected>1 неделя</option>
                 <option>2 недели</option>
                 <option>3 недели</option>
               </select>
