--- a/numismatists/ad.html
+++ b/numismatists/ad.html
@@ -6,8 +6,7 @@
   <link href="css/style.css" rel="stylesheet">
   <link href="css/new.css" rel="stylesheet">
   <link href="img/favicon.ico" rel="shortcut icon">
-  <link href=
-  'http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300&subset=latin,cyrillic-ext'
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300&subset=latin,cyrillic-ext'
   rel='stylesheet' type='text/css'>
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   <script src="js/script.js"></script>
@@ -97,7 +96,7 @@
       </div>
     </header>
     <div class="wrapper">
-      <div class="content profile settings">
+      <div class="content profile ad">
         <aside>
           <menu>
             <ul>
@@ -115,13 +114,13 @@
           </div>
           <div class="options">
             <label class="checkbox"><span>Отметить все</span></label>
-            <button class="up">Поднять объявление</button>
+            <button class="up active">Поднять объявление</button>
             <button class="delete">Удалить</button>
           </div>
 
           <div class="list">
-            <div class="row">
-            <label class="checkbox"><span><img src="img-1.jpg"></span></label>
+            <article class="item">
+              <label class="checkbox"><span><img src="img-1.jpg"></span></label>
               <div class="info">
                 <p class="title">1 рубль 1705 года («Польский талер»)</p>
                 <p class="price">137 932 <span>&#8399;</span></p>
@@ -130,12 +129,38 @@
                   <a href="#">Удалить</a>
                   <select name="more">
                     <option disabled selected>Еще</option>
-                    <option>Еще 1</option>
-                    <option>Еще 2</option>
                   </select>
                 </div>
               </div>
-            </div>
+            </article>
+            <article class="item">
+              <label class="checkbox"><span><img src="img-2.jpg"></span></label>
+              <div class="info">
+                <p class="title">1 рубль 1705 года («Польский талер»)</p>
+                <p class="price">137 932 <span>&#8399;</span></p>
+                <div class="option">
+                  <a href="#">Активировать</a>
+                  <a href="#">Удалить</a>
+                  <select name="more">
+                    <option disabled selected>Еще</option>
+                  </select>
+                </div>
+              </div>
+            </article>
+            <article class="item">
+              <label class="checkbox"><span><img src="img-3.jpg"></span></label>
+              <div class="info">
+                <p class="title">1 рубль 1705 года («Польский талер»)</p>
+                <p class="price">137 932 <span>&#8399;</span></p>
+                <div class="option">
+                  <a href="#">Активировать</a>
+                  <a href="#">Удалить</a>
+                  <select name="more">
+                    <option disabled selected>Еще</option>
+                  </select>
+                </div>
+              </div>
+            </article>
           </div>
         </div>
         <footer>
