--- a/numismatists/page.html
+++ b/numismatists/page.html
@@ -99,6 +99,7 @@
       <div class="content page">
         <h1>Пользовательское соглашение</h1>
         <p>Целью НК "Монеты+" 
+        <a href="ad.html">Мои объявления</a> и 
         <a href="new.html">Подать объявление</a> и 
         <a href="settings.html">Настройки</a> и 
         <a class="modal-comm" href="#">модальное окно "Комментарий"</a> и 
