--- a/numismatists/new.html
+++ b/numismatists/new.html
@@ -120,8 +120,8 @@
               </select>
             </div>
             <div class="row">
-              <span placeholder="5000">Цена</span>
-              <div><input type="text"></div>
+              <span >Цена</span>
+              <div><input type="text" placeholder="5000"></div>
             </div>
             <div class="row">
               <span>Количество</span>
