--- a/numismatists/new.html
+++ b/numismatists/new.html
@@ -137,7 +137,7 @@
             </div>
             <div class="row">
               <span>Описание</span>
-              <input type="textarea">
+              <textarea></textarea>
             </div>
             <div class="row">
             	<span>Фотографии <span class="desc">Вы можете загрузить не более 5 фото</span></span>
