--- a/numismatists/page.html
+++ b/numismatists/page.html
@@ -181,6 +181,48 @@
       <input class="reg" type="submit" value="Зарегистрироваться">
     </form>
   </div>
+  <div class="comm">
+  	<p class="title">Оставьте отзыв</p> 
+  	<form method="post">
+  		<input type="text" placeholder='Заголовок'>
+  		<textarea placeholder='Текст отзыва'></textarea>
+  		<div class="star">
+  			<span></span>
+  			<span></span>
+  			<span></span>
+  			<span></span>
+  			<span></span>
+  		</div>
+  		<input type="submit" value="Отправить">
+  	</form>
+  	<div class="last">
+  		<article>
+  			<span class="name">Алексей</span>
+  			<span class="date">5.11.2014</span>
+  			<div class="star">
+  				<span></span>
+  				<span></span>
+  				<span></span>
+  				<span></span>
+  				<span></span>
+  			</div>
+  			<p class="comm">Очень круто! Одна из самых редких монет и в прекрасном состоянии!</p>
+  		</article>
+  		<article>
+  			<span class="name">Николай</span>
+  			<span class="date">5.11.2014</span>
+  			<div class="star">
+  				<span></span>
+  				<span></span>
+  				<span></span>
+  				<span></span>
+  				<span></span>
+  			</div>
+  			<p class="comm">Прекрасное состояние моенты и цена вполне адекватная!</p>
+  		</article>
+  		<a href="#">Загрузить еще отзывы</a>
+  	</div>
+  </div>
 </div>
 </div>
 </body>
