--- a/numismatists/ad.html
+++ b/numismatists/ad.html
@@ -123,7 +123,7 @@
               <label class="checkbox"><span><img src="img-4.jpg"></span></label>
               <div class="info">
                 <p class="title">1 рубль 1705 года («Польский талер»)</p>
-                <p class="price">137 932 <span>&#8399;</span></p>
+                <p class="price">137 932 <span>Р</span></p>
                 <div class="option">
                   <a href="#">Активировать</a>
                   <a href="#">Удалить</a>
@@ -137,7 +137,7 @@
               <label class="checkbox"><span><img src="img-5.jpg"></span></label>
               <div class="info">
                 <p class="title">1 рубль 1705 года («Польский талер»)</p>
-                <p class="price">137 932 <span>&#8399;</span></p>
+                <p class="price">137 932 <span>Р</span></p>
                 <div class="option">
                   <a href="#">Активировать</a>
                   <a href="#">Удалить</a>
@@ -151,7 +151,7 @@
               <label class="checkbox"><span><img src="img-4.jpg"></span></label>
               <div class="info">
                 <p class="title">1 рубль 1705 года («Польский талер»)</p>
-                <p class="price">137 932 <span>&#8399;</span></p>
+                <p class="price">137 932 <span>Р</span></p>
                 <div class="option">
                   <a href="#">Активировать</a>
                   <a href="#">Удалить</a>
