--- a/numismatists/item.html
+++ b/numismatists/item.html
@@ -167,7 +167,7 @@
               <div class="info">
                 <p class="title">1 рубль 1705 года («Польский талер»)</p>
                 <p class="desc">После денежной реформы 1755 года в сферу обращения была выпущена золотая монета с новым номиналом 20 рублей.</p>
-                <p class="price">137 932 <span>&#8399;</span></p>
+                <p class="price">137 932 <span>Р</span></p>
                 <div class="stars">
                   <span></span><span></span><span></span><span></span><span></span>
                 </div>
