--- a/numismatists/new.html
+++ b/numismatists/new.html
@@ -156,7 +156,7 @@
               <div class="img"><img alt="" src="img-6.jpg"></div>
               <div class="info">
                 <a href="item.html" class="title">1 рубль 1705 года</a>
-                <p class="price">137 932 <span>&#8399;</span></p>
+                <p class="price">137 932 <span>Р</span></p>
                 <div class="stars">
                   <span></span><span></span><span></span><span></span><span></span>
                 </div>
@@ -166,7 +166,7 @@
               <div class="img"><img alt="" src="img-5.jpg"></div>
               <div class="info">
                 <a href="item.html" class="title">Двойной орел</a>
-                <p class="price">137 932 <span>&#8399;</span></p>
+                <p class="price">137 932 <span>Р</span></p>
                 <div class="stars">
                   <span></span><span></span><span></span><span></span><span></span>
                 </div>
@@ -176,7 +176,7 @@
               <div class="img"><img alt="" src="img-4.jpg"></div>
               <div class="info">
                 <a href="item.html" class="title">Юбилейный доллар</a>
-                <p class="price">137 932 <span>&#8399;</span></p>
+                <p class="price">137 932 <span>Р</span></p>
                 <div class="stars">
                   <span></span><span></span><span></span><span></span><span></span>
                 </div>
