--- a/numismatists/index.html
+++ b/numismatists/index.html
@@ -178,7 +178,7 @@
             <div class="img"><img alt="" src="img-6.jpg"></div>
             <div class="info">
               <a href="item.html" class="title">1 рубль 1705 года («Польский талер»)</a>
-              <p class="price">137 932 <span>&#8399;</span></p>
+              <p class="price">137 932 <span>Р</span></p>
               <div class="stars">
                 <span></span><span></span><span></span><span></span><span></span>
               </div>
@@ -188,7 +188,7 @@
             <div class="img"><img alt="" src="img-6.jpg"></div>
             <div class="info">
               <a href="item.html" class="title">1 рубль 1705 года («Польский талер»)</a>
-              <p class="price">137 932 <span>&#8399;</span></p>
+              <p class="price">137 932 <span>Р</span></p>
               <div class="stars">
                 <span></span><span></span><span></span><span></span><span></span>
               </div>
@@ -198,7 +198,7 @@
             <div class="img"><img alt="" src="img-6.jpg"></div>
             <div class="info">
               <a href="item.html" class="title">1 рубль 1705 года («Польский талер»)</a>
-              <p class="price">137 932 <span>&#8399;</span></p>
+              <p class="price">137 932 <span>Р</span></p>
               <div class="stars">
                 <span></span><span></span><span></span><span></span><span></span>
               </div>
@@ -208,7 +208,7 @@
             <div class="img"><img alt="" src="img-6.jpg"></div>
             <div class="info">
               <a href="item.html" class="title">1 рубль 1705 года («Польский талер»)</a>
-              <p class="price">137 932 <span>&#8399;</span></p>
+              <p class="price">137 932 <span>Р</span></p>
               <div class="stars">
                 <span></span><span></span><span></span><span></span><span></span>
               </div>
