--- a/numismatists/page.html
+++ b/numismatists/page.html
@@ -186,7 +186,7 @@
   	<form method="post">
   		<input type="text" placeholder='Заголовок'>
   		<textarea placeholder='Текст отзыва'></textarea>
-  		<div class="star">
+  		<div class="stars">
   			<span></span>
   			<span></span>
   			<span></span>
@@ -199,7 +199,7 @@
   		<article>
   			<span class="name">Алексей</span>
   			<span class="date">5.11.2014</span>
-  			<div class="star">
+  			<div class="stars">
   				<span></span>
   				<span></span>
   				<span></span>
@@ -211,7 +211,7 @@
   		<article>
   			<span class="name">Николай</span>
   			<span class="date">5.11.2014</span>
-  			<div class="star">
+  			<div class="stars">
   				<span></span>
   				<span></span>
   				<span></span>
