modal comm complete

--- a/numismatists/page.html
+++ b/numismatists/page.html
@@ -195,7 +195,8 @@
   		</div>
   		<input type="submit" value="Отправить">
   	</form>
-  	<div class="last">
+  	<div class="last-comm">
+  		<p class="title">Последние отзывы</p>
   		<article>
   			<span class="name">Алексей</span>
   			<span class="date">5.11.2014</span>
