--- a/numismatists/index.html
+++ b/numismatists/index.html
@@ -124,54 +124,62 @@
               </li>
               <li>
                 <label class="checkbox"><input type="checkbox" name=""><span>Россия 1997 - н.в. -
-                разное</span></label>
-              </li>
-              <li>
-                <label class="checkbox"><input type="checkbox" name=""><span>США</span></label>
-              </li>
-              <li>
-                <label class="checkbox"><input type="checkbox" name=""><span>Юбилейные</span></label>
-              </li>
-              <li>
-                <label class="checkbox"><input type="checkbox" name=""><span>Страны СНГ</span></label>
-              </li>
-              <li>
-                <label class="checkbox"><input type="checkbox" name=""><span>Монеты СССР</span></label>
-              </li>
-              <li>
-                <label class="checkbox"><input type="checkbox" name=""><span>Все категории</span></label>
-              </li>
-            </ul>
-          </menu>
-        </aside>
-        <section class="items">
-          <div class="panel">
-            <form class="search">
-              <input type="text" placeholder="Поиск"> 
-              <select name="" id="">
-              	<option>Любая категория</option>
-                <option>70 лет Победы</option>
-                <option>ГВС</option>
-                <option>Древние города России</option>
-                <option>Жетоны, копии и прочее</option>
-              </select> 
-              <input type="submit" value="Найти">
-            </form>
-            <div class="sort">
-            	<select name="" id="">
-            		<option>Сотрировка по цене</option>
+                  разное</span></label>
+                </li>
+                <li>
+                  <label class="checkbox"><input type="checkbox" name=""><span>США</span></label>
+                </li>
+                <li>
+                  <label class="checkbox"><input type="checkbox" name=""><span>Юбилейные</span></label>
+                </li>
+                <li>
+                  <label class="checkbox"><input type="checkbox" name=""><span>Страны СНГ</span></label>
+                </li>
+                <li>
+                  <label class="checkbox"><input type="checkbox" name=""><span>Монеты СССР</span></label>
+                </li>
+                <li>
+                  <label class="checkbox"><input type="checkbox" name=""><span>Все категории</span></label>
+                </li>
+              </ul>
+            </menu>
+          </aside>
+          <section class="items">
+            <div class="panel">
+              <form class="search">
+                <input type="text" placeholder="Поиск">
+                <div class="select">
+                  <span>Сортировка по цене</span>
+                  <div class="options">
+                    <span>Сотрировка по цене</span>
+                    <span>Сотрировка по имени</span>
+                    <span>Сотрировка по рейтингу</span>
+                  </div>
+                </div> 
+                <select>
+                 <option>Любая категория</option>
+                 <option>70 лет Победы</option>
+                 <option>ГВС</option>
+                 <option>Древние города России</option>
+                 <option>Жетоны, копии и прочее</option>
+               </select> 
+               <input type="submit" value="Найти">
+             </form>
+             <div class="sort">
+               <select name="" id="">
+                <option>Сотрировка по цене</option>
                 <option>Сотрировка по имени</option>
                 <option>Сотрировка по рейтингу</option>
-            	</select>
-            	<div class="count">
-            		<span>Товаров на странице:</span> 
-            		<select name="" id="">
+              </select>
+              <div class="count">
+                <span>Товаров на странице:</span> 
+                <select name="" id="">
                   <option>5</option>
                   <option>10</option>
                   <option>15</option>
                   <option>20</option>
-            		</select>
-            	</div>
+                </select>
+              </div>
             </div>
           </div>
           <article class="item">
