--- a/numismatists/index.html
+++ b/numismatists/index.html
@@ -149,36 +149,36 @@
               <form class="search">
                 <input type="text" placeholder="Поиск">
                 <div class="select">
-                  <span>Сортировка по цене</span>
+                  <span>Любая категория</span>
                   <div class="options">
-                    <span>Сотрировка по цене</span>
-                    <span>Сотрировка по имени</span>
-                    <span>Сотрировка по рейтингу</span>
+                    <span>Любая категория</span>
+                    <span>70 лет Победы</span>
+                    <span>Древние города России</span>
+                    <span>Жетоны, копии и прочее</span>
                   </div>
                 </div> 
-                <select>
-                 <option>Любая категория</option>
-                 <option>70 лет Победы</option>
-                 <option>ГВС</option>
-                 <option>Древние города России</option>
-                 <option>Жетоны, копии и прочее</option>
-               </select> 
-               <input type="submit" value="Найти">
-             </form>
-             <div class="sort">
-               <select name="" id="">
-                <option>Сотрировка по цене</option>
-                <option>Сотрировка по имени</option>
-                <option>Сотрировка по рейтингу</option>
-              </select>
+                <input type="submit" value="Найти">
+              </form>
+              <div class="sort">
+               <div class="select">
+                <span>Сортировка по цене</span>
+                <div class="options">
+                  <span>Сотрировка по цене</span>
+                  <span>Сотрировка по имени</span>
+                  <span>Сотрировка по рейтингу</span>
+                </div>
+              </div> 
               <div class="count">
                 <span>Товаров на странице:</span> 
-                <select name="" id="">
-                  <option>5</option>
-                  <option>10</option>
-                  <option>15</option>
-                  <option>20</option>
-                </select>
+                <div class="select">
+                  <span>5</span>
+                  <div class="options">
+                    <span>5</span>
+                    <span>10</span>
+                    <span>15</span>
+                    <span>20</span>
+                  </div>
+                </div> 
               </div>
             </div>
           </div>
