--- a/numismatists/ad.html
+++ b/numismatists/ad.html
@@ -127,9 +127,14 @@
                 <div class="option">
                   <a href="#">Активировать</a>
                   <a href="#">Удалить</a>
-                  <select name="more">
-                    <option disabled selected>Еще</option>
-                  </select>
+                  <div class="select">
+                    <span>Еще</span>
+                    <div class="options">
+                      <span>1</span>
+                      <span>2</span>
+                      <span>3</span>
+                    </div>
+                  </div> 
                 </div>
               </div>
             </article>
