--- a/numismatists/ad.html
+++ b/numismatists/ad.html
@@ -130,9 +130,8 @@
                   <div class="select">
                     <span>Еще</span>
                     <div class="options">
-                      <span>1</span>
-                      <span>2</span>
-                      <span>3</span>
+                      <span>Еще</span>
+                      <span>Еще</span>
                     </div>
                   </div> 
                 </div>
@@ -146,9 +145,13 @@
                 <div class="option">
                   <a href="#">Активировать</a>
                   <a href="#">Удалить</a>
-                  <select name="more">
-                    <option disabled selected>Еще</option>
-                  </select>
+                  <div class="select">
+                    <span>Еще</span>
+                    <div class="options">
+                      <span>Еще</span>
+                      <span>Еще</span>
+                    </div>
+                  </div> 
                 </div>
               </div>
             </article>
@@ -160,9 +163,13 @@
                 <div class="option">
                   <a href="#">Активировать</a>
                   <a href="#">Удалить</a>
-                  <select name="more">
-                    <option disabled selected>Еще</option>
-                  </select>
+                  <div class="select">
+                    <span>Еще</span>
+                    <div class="options">
+                      <span>Еще</span>
+                      <span>Еще</span>
+                    </div>
+                  </div> 
                 </div>
               </div>
             </article>
