--- a/numismatists/new.html
+++ b/numismatists/new.html
@@ -105,19 +105,25 @@
             </div>
             <div class="row">
               <span>Категория</span>
-              <select name="cat">
-                <option disabled selected>Выберите категорию</option>
-                <option>70 лет Победы</option>
-                <option>Древние города России</option>
-              </select>
+              <div class="select">
+                <span>1 неделя</span>
+                <div class="options">
+                  <span>1 неделя</span>
+                  <span>2 недели</span>
+                  <span>3 недели</span>
+                </div>
+              </div>
             </div>
             <div class="row">
               <span>Качество</span>
-              <select name="">
-                <option>Выберите категорию</option>
-                <option>70 лет Победы</option>
-                <option>Древние города России</option>
-              </select>
+              <div class="select">
+                <span>1 неделя</span>
+                <div class="options">
+                  <span>1 неделя</span>
+                  <span>2 недели</span>
+                  <span>3 недели</span>
+                </div>
+              </div>
             </div>
             <div class="row">
               <span >Цена</span>
@@ -129,11 +135,14 @@
             </div>
             <div class="row">
               <span>Срок выставления</span>
-              <select name="">
-                <option  selected>1 неделя</option>
-                <option>2 недели</option>
-                <option>3 недели</option>
-              </select>
+              <div class="select">
+                <span>1 неделя</span>
+                <div class="options">
+                  <span>1 неделя</span>
+                  <span>2 недели</span>
+                  <span>3 недели</span>
+                </div>
+              </div> 
             </div>
             <div class="row">
               <span>Описание</span>
