--- a/numismatists/settings.html
+++ b/numismatists/settings.html
@@ -120,12 +120,14 @@
             </div>
             <div class="row">
               <span>Город</span>
-              <select name="city">
-                <option disabled selected>Выберите город</option>
-                <option>Москва</option>
-                <option>Санкт-Петербург</option>
-                <option>Чудово</option>
-              </select>
+              <div class="select">
+                <span>Выберите город</span>
+                <div class="options">
+                  <span>Москва</span>
+                  <span>Санкт-Петербург</span>
+                  <span>Чудово</span>
+                </div>
+              </div>
             </div>
             <div class="row">
               <span>Телефон</span>
