--- a/numismatists/ad.html
+++ b/numismatists/ad.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <nav>
-      <div class="wrapper">
+      <div class="wrapper-nav">
         <ul>
           <li>
             <a href="index.html">Главная</a>
@@ -34,7 +34,7 @@
         </ul><button class="button">Подать объявление</button>
       </div>
     </nav>
-    <div class="wrapper">
+    <div class="wrapper-header">
       <div class="cover">
         <div class="logo">
           <a href="index.html"><img alt="" src="img/logo.png">
