--- a/numismatists/settings.html
+++ b/numismatists/settings.html
@@ -5,8 +5,7 @@
   <title>Главная</title>
   <link href="css/style.css" rel="stylesheet">
   <link href="img/favicon.ico" rel="shortcut icon">
-  <link href=
-  'http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300&subset=latin,cyrillic-ext'
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300&subset=latin,cyrillic-ext'
   rel='stylesheet' type='text/css'>
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   <script src="js/script.js"></script>
@@ -14,7 +13,7 @@
 <body>
   <header>
     <nav>
-      <div class="wrapper">
+      <div class="wrapper-nav">
         <ul>
           <li>
             <a href="index.html">Главная</a>
@@ -34,7 +33,7 @@
         </ul><button class="button">Подать объявление</button>
       </div>
     </nav>
-    <div class="wrapper">
+    <div class="wrapper-header">
       <div class="cover">
         <div class="logo">
           <a href="index.html"><img alt="" src="img/logo.png">
