--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -54,6 +54,7 @@
 			<div>
 				<ul>
 					<li>Бесплатный выезд<br>на дом</li>
+					<li>Бонусная система<br>скидок</li>
 					<li>Гарантированный<br>результат</li>
 					<li>Работаем по<br>ГОСТ Р 51108-97</li>
 				</ul>
