--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -298,6 +298,13 @@
 				<p>Надежда Осокина</p>
 				<p>Заказывали химчистку коврового покрытия и мягкой мебели(диван и 2 кресла).Заказ был выполнен на следующий день после звонка в удобное для нас время.Очень порадовало качество работы,компетентность исполнителя(молодой человек по имени Андрей),ПРИЯТНАЯ ЦЕНА!! При первой необходимости будем обращаться только к вам и рекомендовать всем знакомым! Процветания вам,постоянных клиентов и удачи в Новом году.Еще раз спасибо)</p>
 			</article>
+			<article>
+				<img src="img/icon-8-3.png" alt="">
+				<p>Сергей Тюриков</p>
+				<p>Молодцы!!! Хорошая работа!!!<br>
+					Идеально вычистили мне заднее сиденье авто, которое безрезультатно чистили три разных<br>"псевдохимчистки". Теперь только к Вам буду обращаться, и друзьям своим советовать!!!
+				</p>
+			</article>
 		</div>
 	</div>
 	<div class="block-9">
