--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -351,6 +351,57 @@
 				</div>
 			</div>
 	</div>
+	<div class="block-10">
+		<wrapper>
+			<h1>Прайс лист</h1>
+			<table>
+				<div class="">
+					<div>
+						<div class="title">Кресло</div>
+						<div class="ico"></div>
+						<div class="desc"></div>
+						<div class="price"><span>160</span><span>грн</span></div>
+					</div>
+					<div>
+						<div class="title"></div>
+						<div class="ico"></div>
+						<div class="desc"></div>
+						<div class="price"><span></span><span>грн</span></div>
+					</div>
+					<div>
+						<div class="title">диван</div>
+						<div class="ico"></div>
+						<div class="desc"></div>
+						<div class="price"><span></span><span>грн</span></div>
+					</div>
+					<div>
+						<div class="title"></div>
+						<div class="ico"></div>
+						<div class="desc"></div>
+						<div class="price"><span></span><span>грн</span></div>
+					</div>
+					<div>
+						<div class="title">Ковер</div>
+						<div class="ico"></div>
+						<div class="desc"></div>
+						<div class="price"><span>25 </span><span>грн/м<sup>2</sup></span></div>
+					</div>
+					<div>
+						<div class="title">Матрас</div>
+						<div class="ico"></div>
+						<div class="desc"></div>
+						<div class="price"><span>250</span><span>грн</span></div>
+					</div>
+					<div>
+						<div class="title">Стул</div>
+						<div class="ico"></div>
+						<div class="desc"></div>
+						<div class="price"><span>40</span><span>грн</span></div>
+					</div>
+				</div>
+			</table>
+		</wrapper>
+	</div>
 
 	<div class="shadow">
 		<form action="send.php" method="post">
