--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -14,9 +14,8 @@
 <body>
 	<nav class="top">
 		<ul>
-			<li class="active"><a href="#">Что дает химчистка</a></li>
 			<li><a href="#">Почему не чистить самому</a></li>
-			<li><a href="#">Результаты нашей работы</a></li>
+			<li class="active"><a href="#">Результаты нашей работы</a></li>
 			<li><a href="#">Как мы чистим</a></li>
 			<li><a href="#">Гарантии результата</a></li>
 			<li><a href="#">Отзывы</a></li>
