block10 structure complete
next width and height game

--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -351,7 +351,7 @@
 			</div>
 	</div>
 	<div class="block-10">
-		<div class"wrapper">
+		<div class="wrapper">
 			<h1>Прайс лист</h1>
 			<div class="table">
 				<div>
