--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -358,43 +358,43 @@
 					<div class="title">Кресло</div>
 					<div class="ico"></div>
 					<div class="desc"></div>
-					<div class="price"><span>160</span><span>грн</span></div>
+					<div class="price"><span>160<div class="bonus">+160</div></span><span>грн</span></div>
 				</div>
 				<div>
 					<div class="title"></div>
 					<div class="ico"></div>
-					<div class="desc"></div>
-					<div class="price"><span></span><span>грн</span></div>
+					<div class="desc">2-х местный</div>
+					<div class="price"><span>300<div class="bonus">+300</div></span><span>грн</span></div>
 				</div>
 				<div>
-					<div class="title">диван</div>
+					<div class="title">Диван</div>
 					<div class="ico"></div>
-					<div class="desc"></div>
-					<div class="price"><span></span><span>грн</span></div>
+					<div class="desc">3-х местный</div>
+					<div class="price"><span>350<div class="bonus">+350</div></span><span>грн</span></div>
 				</div>
 				<div>
 					<div class="title"></div>
 					<div class="ico"></div>
-					<div class="desc"></div>
-					<div class="price"><span></span><span>грн</span></div>
+					<div class="desc">4-х местный</div>
+					<div class="price"><span>450<div class="bonus">+450</div></span><span>грн</span></div>
 				</div>
 				<div>
 					<div class="title">Ковер</div>
 					<div class="ico"></div>
-					<div class="desc"></div>
-					<div class="price"><span>25 </span><span>грн/м<sup>2</sup></span></div>
+					<div class="desc">ковролин</div>
+					<div class="price"><span>25<div class="bonus">+25</div></span><span>грн/м<sup>2</sup></span></div>
 				</div>
 				<div>
 					<div class="title">Матрас</div>
 					<div class="ico"></div>
 					<div class="desc"></div>
-					<div class="price"><span>250</span><span>грн</span></div>
+					<div class="price"><span>250<div class="bonus">+250</div></span><span>грн</span></div>
 				</div>
 				<div>
 					<div class="title">Стул</div>
 					<div class="ico"></div>
 					<div class="desc"></div>
-					<div class="price"><span>40</span><span>грн</span></div>
+					<div class="price"><span>40<div class="bonus">+40</div></span><span>грн</span></div>
 				</div>
 			</div>
 		</div>
