--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -402,8 +402,14 @@
 
 	<div class="shadow">
 		<form action="send.php" method="post">
-			<input type="text" name="name" placeholder="Введите имя">
-			<input type="text" name="phone" placeholder="Введите номер">
+			<span>Ваше имя:</span>
+			<input type="text" name="name">
+			<span>Номер телефона:</span>
+			<input type="text" name="phone">
+			<span>Время:</span>
+			<p>Мы можем перезвонить Вам 
+				с 9 до 18 по будням, либо в удобное 
+				для Вас время:</p>
 			<input type="submit" value="Заказать">
 			<div class="cancel"></div>
 		</form>
