--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -14,13 +14,13 @@
 <body>
 	<nav class="top">
 		<ul>
-			<li><a href="#">Почему не чистить самому</a></li>
+			<li><a href="#why">Почему не чистить самому</a></li>
 			<li class="active"><a href="#">Результаты нашей работы</a></li>
-			<li><a href="#">Как мы чистим</a></li>
-			<li><a href="#">Гарантии результата</a></li>
-			<li><a href="#">Отзывы</a></li>
-			<li><a href="#">Вопросы</a></li>
-			<li><a href="#">Цены</a></li>
+			<li><a href="#how">Как мы чистим</a></li>
+			<li><a href="#garant">Гарантии результата</a></li>
+			<li><a href="#comm">Отзывы</a></li>
+			<li><a href="#question">Вопросы</a></li>
+			<li><a href="#price">Цены</a></li>
 			<li><a href="#">Контакты</a></li>
 		</ul>
 	</nav>
@@ -157,7 +157,7 @@
 		</div>
 	</div>
 
-	<div class="block-4">
+	<div class="block-4" id="why">
 		<div class="wrapper">
 			<h1>Чистить самому — невыгодно!</h1>
 			<h2>Для того чтобы выполнить химчистку дивана или коврового покрытия, Вам потребуется:</h2>
@@ -225,7 +225,7 @@
 	</div>
 	
 
-	<div class="block-7">
+	<div class="block-7" id="garant">
 		<div class="wrapper">
 			<h1>Преимущества и гарантии</h1>
 			<section class="list-col2 left">
@@ -278,7 +278,7 @@
 		</div>
 	</div>
 
-	<div class="block-8">
+	<div class="block-8" id="comm">
 		<div class="wrapper">
 			<h1>Отзывы реальных людей</h1>
 			<article>
@@ -306,7 +306,7 @@
 			</article>
 		</div>
 	</div>
-	<div class="block-9">
+	<div class="block-9" id="question">
 		<div class="wrapper">
 			<h1>Часто задаваемые вопросы</h1>
 			<article>
@@ -350,7 +350,7 @@
 				</div>
 			</div>
 	</div>
-	<div class="block-10">
+	<div class="block-10" id="price">
 		<div class="wrapper">
 			<h1>Прайс лист</h1>
 			<div class="table">
