--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -399,6 +399,18 @@
 			</div>
 		</div>
 	</div>
+	<div class="gallery">
+		<h1>Наши работы</h1>
+		<ul>
+			<li><img src="img/gallery1.jpg" alt=""></li>
+			<li><img src="img/gallery2.jpg" alt=""></li>
+			<li><img src="img/gallery3.jpg" alt=""></li>
+			<li><img src="img/gallery4.jpg" alt=""></li>
+			<li><img src="img/gallery5.jpg" alt=""></li>
+			<li><img src="img/gallery6.jpg" alt=""></li>
+			<li><img src="img/gallery7.jpg" alt=""></li>
+		</ul>
+	</div>
 
 	<div class="shadow">
 		<form action="send.php" method="post">
