--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -4,18 +4,20 @@
 	<meta charset="UTF-8">
 	<title>AquaClean</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link href="css/lightbox.css" rel="stylesheet" />
 	<link rel="shortcut icon" href="img/favicon.ico">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:700,600,400&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	<script src="js/lightbox.min.js"></script>
 	<script src="js/script.js"></script>
 </head>
 <body>
 	<nav class="top">
 		<ul>
 			<li><a href="#why">Почему не чистить самому</a></li>
-			<li class="active"><a href="#">Результаты нашей работы</a></li>
+			<li class="active"><a href="#gallery">Результаты нашей работы</a></li>
 			<li><a href="#how">Как мы чистим</a></li>
 			<li><a href="#garant">Гарантии результата</a></li>
 			<li><a href="#comm">Отзывы</a></li>
@@ -275,6 +277,7 @@
 				</div>
 
 			</section>
+			<div class="but"><button class="button blue">Вызвать специалиста</button></div>
 		</div>
 	</div>
 
@@ -399,16 +402,17 @@
 			</div>
 		</div>
 	</div>
-	<div class="gallery">
+	<div class="gallery" id="gallery">
 		<h1>Наши работы</h1>
-		<ul>
-			<li><img src="img/gallery1.jpg" alt=""></li>
-			<li><img src="img/gallery2.jpg" alt=""></li>
-			<li><img src="img/gallery3.jpg" alt=""></li>
-			<li><img src="img/gallery4.jpg" alt=""></li>
-			<li><img src="img/gallery5.jpg" alt=""></li>
-			<li><img src="img/gallery6.jpg" alt=""></li>
-			<li><img src="img/gallery7.jpg" alt=""></li>
+		<ul class="gallery">
+
+			<li><a href="img/gallery1.jpg" data-lightbox="image-1" data-title="My caption"><img src="img/gallery1.jpg" alt=""></a></li>
+			<li><a href="img/gallery2.jpg" data-lightbox="image-1" data-title="My caption"><img src="img/gallery2.jpg" alt=""></a></li>
+			<li><a href="img/gallery3.jpg" data-lightbox="image-1" data-title="My caption"><img src="img/gallery3.jpg" alt=""></a></li>
+			<li><a href="img/gallery4.jpg" data-lightbox="image-1" data-title="My caption"><img src="img/gallery4.jpg" alt=""></a></li>
+			<li><a href="img/gallery5.jpg" data-lightbox="image-1" data-title="My caption"><img src="img/gallery5.jpg" alt=""></a></li>
+			<li><a href="img/gallery6.jpg" data-lightbox="image-1" data-title="My caption"><img src="img/gallery6.jpg" alt=""></a></li>
+			<li><a href="img/gallery7.jpg" data-lightbox="image-1" data-title="My caption"><img src="img/gallery7.jpg" alt=""></a></li>
 		</ul>
 	</div>
 
