--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -313,7 +313,7 @@
 		<div class="wrapper">
 			<h1>Часто задаваемые вопросы</h1>
 			<article>
-				<p>Точно ли отстираются все пятна и запахи?</p>
+				<p class="open">Точно ли отстираются все пятна и запахи?</p>
 				<p>Мы даем гарантию на то, что приложим все усилия для очистки Вашего ковра от загрязнений любого рода. И при этом касательно конкретного загрязнения мы ничего не можем сказать, не зная его истории: как давно и каким образом пятно появилось, что уже делалось для его устранения и т.д. Не утруждайте себя поиском оптимального варианта выведения пятен. Их настолько много - клейкие, химические, растительные, животные – Вы можете положиться на наш опыт по пятновыведению – (удаляются до 95% пятен), и Ваш диван (ковер) будет очищен от столь надоевших и портящих настроение пятен с удивительной быстротой.</p>
 			</article>
 			<article>
@@ -406,13 +406,13 @@
 		<h1>Наши работы</h1>
 		<ul class="gallery">
 
-			<li><a href="img/gallery1.jpg" data-lightbox="image-1" data-title="My caption"><img src="img/gallery1.jpg" alt=""></a></li>
-			<li><a href="img/gallery2.jpg" data-lightbox="image-1" data-title="My caption"><img src="img/gallery2.jpg" alt=""></a></li>
-			<li><a href="img/gallery3.jpg" data-lightbox="image-1" data-title="My caption"><img src="img/gallery3.jpg" alt=""></a></li>
-			<li><a href="img/gallery4.jpg" data-lightbox="image-1" data-title="My caption"><img src="img/gallery4.jpg" alt=""></a></li>
-			<li><a href="img/gallery5.jpg" data-lightbox="image-1" data-title="My caption"><img src="img/gallery5.jpg" alt=""></a></li>
-			<li><a href="img/gallery6.jpg" data-lightbox="image-1" data-title="My caption"><img src="img/gallery6.jpg" alt=""></a></li>
-			<li><a href="img/gallery7.jpg" data-lightbox="image-1" data-title="My caption"><img src="img/gallery7.jpg" alt=""></a></li>
+			<li><a href="img/gallery1.jpg" data-lightbox="image-1"><img src="img/gallery1.jpg" alt=""></a></li>
+			<li><a href="img/gallery2.jpg" data-lightbox="image-1"><img src="img/gallery2.jpg" alt=""></a></li>
+			<li><a href="img/gallery3.jpg" data-lightbox="image-1"><img src="img/gallery3.jpg" alt=""></a></li>
+			<li><a href="img/gallery4.jpg" data-lightbox="image-1"><img src="img/gallery4.jpg" alt=""></a></li>
+			<li><a href="img/gallery5.jpg" data-lightbox="image-1"><img src="img/gallery5.jpg" alt=""></a></li>
+			<li><a href="img/gallery6.jpg" data-lightbox="image-1"><img src="img/gallery6.jpg" alt=""></a></li>
+			<li><a href="img/gallery7.jpg" data-lightbox="image-1"><img src="img/gallery7.jpg" alt=""></a></li>
 		</ul>
 	</div>
 
