--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -384,7 +384,7 @@
 				<div>
 					<div class="title">Ковер</div>
 					<div class="ico"></div>
-					<div class="desc">ковролин</div>
+					<div class="desc">(ковролин)</div>
 					<div class="price"><span>25<div class="bonus">+25</div></span><span>грн/м<sup>2</sup></span></div>
 				</div>
 				<div>
