--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -413,6 +413,8 @@
 			<li><a href="img/gallery5.jpg" data-lightbox="image-1"><img src="img/gallery5.jpg" alt=""></a></li>
 			<li><a href="img/gallery6.jpg" data-lightbox="image-1"><img src="img/gallery6.jpg" alt=""></a></li>
 			<li><a href="img/gallery7.jpg" data-lightbox="image-1"><img src="img/gallery7.jpg" alt=""></a></li>
+			<li><a href="img/gallery8.jpg" data-lightbox="image-1"><img src="img/gallery8.jpg" alt=""></a></li>
+			<li><a href="img/gallery9.jpg" data-lightbox="image-1"><img src="img/gallery9.jpg" alt=""></a></li>
 		</ul>
 	</div>
 
