--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -17,13 +17,13 @@
 	<nav class="top">
 		<ul>
 			<li><a href="#why">Почему не чистить самому</a></li>
-			<li class="active"><a href="#gallery">Результаты нашей работы</a></li>
-			<li><a href="#how">Как мы чистим</a></li>
 			<li><a href="#garant">Гарантии результата</a></li>
+			<li><a href="#how">Как мы чистим</a></li>
 			<li><a href="#comm">Отзывы</a></li>
 			<li><a href="#question">Вопросы</a></li>
 			<li><a href="#price">Цены</a></li>
-			<li><a href="#">Контакты</a></li>
+			<li class="active"><a href="#gallery">Результаты нашей работы</a></li>
+			<li><a href="#contacts">Контакты</a></li>
 		</ul>
 	</nav>
 	<header>
