--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -10,6 +10,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 	<script src="js/lightbox.min.js"></script>
 	<script src="js/script.js"></script>
 </head>
@@ -417,7 +418,10 @@
 			<li><a href="img/gallery9.jpg" data-lightbox="image-1"><img src="img/gallery9.jpg" alt=""></a></li>
 		</ul>
 	</div>
-
+	
+	<div class="footer">
+		<div id="map-canvas"></div>
+	</div>
 	<div class="shadow">
 		<form action="send.php" method="post">
 			<span>Ваше имя:</span>
