--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -10,7 +10,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-	<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 	<script src="js/lightbox.min.js"></script>
 	<script src="js/script.js"></script>
 </head>
@@ -420,7 +420,7 @@
 	</div>
 	
 	<div class="footer">
-		<div id="map-canvas"></div>
+		<div id="map_canvas"></div>
 	</div>
 	<div class="shadow">
 		<form action="send.php" method="post">
